--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="viho admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, viho admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
     <link rel="icon" href="~/images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon">
     <title>viho - Premium Admin Template</title>
@@ -36,6 +36,8 @@
     <link rel="stylesheet" type="text/css" href="~/css/owlcarousel.css">
     <link rel="stylesheet" type="text/css" href="~/css/rating.css">
     <link rel="stylesheet" type="text/css" href="~/css/jsgrid.css">
+    <link rel="stylesheet" type="text/css" href="~/css/select2.css">
+    <link rel="stylesheet" type="text/css" href="~/css/date-picker.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css">
@@ -131,6 +133,7 @@
             </footer>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- latest jquery-->
     <script src="~/js/jquery-3.5.1.min.js"></script>
     <!-- feather icon js-->
@@ -150,6 +153,11 @@
     <script src="~/js/clipboard/clipboard.min.js"></script>
     <script src="~/js/custom-card/custom-card.js"></script>
     <script src="~/js/tooltip-init.js"></script>
+    <script src="~/js/datepicker/date-picker/datepicker.js"></script>
+    <script src="~/js/datepicker/date-picker/datepicker.en.js"></script>
+    <script src="~/js/datepicker/date-picker/datepicker.custom.js"></script>
+    <script src="~/js/select2/select2.full.min.js"></script>
+    <script src="~/js/select2/select2-custom.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
    
@@ -161,7 +169,7 @@
     <script src="~/js/ecommerce.js"></script>
     <script src="~/js/product-list-custom.js"></script>
     <script src="~/js/Global.js"></script>
-    <script src="~/js/forCreateOrder/formOperations.js"></script>
+   
 
     <!-- login js-->
     <!-- Plugin used-->
