--- a/Views/Order/EditOrder.cshtml
+++ b/Views/Order/EditOrder.cshtml
@@ -43,30 +43,30 @@
                         </div>
                     </div>
                     <div class="mb-4">
-                        <div class="col-xl-6 xl-100 xl-mt-job">
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="col-sm-6">
-                                        <label class="col-form-label text-end pt-0">Sipariş Tarihi</label>
-                                        <div class="input-group">
-                                            <input class="datepicker-here form-control digits" type="text" data-language="tr">
-                                        </div>
+
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="col-sm-6">
+                                    <label class="col-form-label text-end pt-0">Sipariş Tarihi</label>
+                                    <div class="input-group">
+                                        <input id="SipTrh" class="datepicker-here form-control digits" type="text" data-language="tr">
                                     </div>
-                                </div>
-                                <div class="col-md-1">
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="col-sm-6 xs-mt-period">
-                                        <label class="col-form-label text-end pt-0">Teslim Tarihi</label>
-                                        <div class="input-group">
-                                            <input class="datepicker-here form-control digits" type="text" data-language="tr">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-5">
                                 </div>
                             </div>
+                            <div class="col-md-1">
+                            </div>
+                            <div class="col-md-3">
+                                <div class="col-sm-6 xs-mt-period">
+                                    <label class="col-form-label text-end pt-0">Teslim Tarihi</label>
+                                    <div class="input-group">
+                                        <input id="TesTrh" class="datepicker-here form-control digits" type="text" data-language="tr">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                            </div>
                         </div>
+
                     </div>
                     <div class="mb-4">
                         <div class="row">
@@ -98,10 +98,10 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-11">
+                        <div class="col-md-10">
                         </div>
 
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             <button id="ekle" readonly class="btn btn-primary">Ekle</button>
                         </div>
                     </div>
