--- a/Views/Login/LoginPage.cshtml
+++ b/Views/Login/LoginPage.cshtml
@@ -1,50 +1,51 @@
-
 @{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     ViewBag.Title = "Giriþ Yap";
-  
+
 }
 
- 
 
-    <section>         
-      <div class="container-fluid p-0">
+
+<section>
+    <div class="container-fluid p-0">
         <div class="row">
-          <div class="col-12">
-            <div class="login-card">
+            <div class="col-12">
+                <div class="login-card">
                     <form class="theme-form login-form" asp-controller="Login" asp-action="LoginPage" method="post">
-                <h4>Giriþ Sayfasý</h4>
-                <h6>Hoþgeldiniz! Hesabýnýza giriþ yapýn.</h6>
-                <div class="form-group">
-                  <label>Mail Adresi</label>
-                  <div class="input-group"><span class="input-group-text"><i class="icon-email"></i></span>
+                        <h4>Giriþ Sayfasý</h4>
+                        <h6>Hoþgeldiniz! Hesabýnýza giriþ yapýn.</h6>
+                        <div class="form-group">
+                            <label>Mail Adresi</label>
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="icon-email"></i></span>
                                 <input class="form-control" type="email" name="Email" required="" placeholder="Test@gmail.com">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label>Þifre</label>
-                  <div class="input-group"><span class="input-group-text"><i class="icon-lock"></i></span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Þifre</label>
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="icon-lock"></i></span>
                                 <input class="form-control" type="password" name="Password" required="" placeholder="*********">
-                   @*  <div class="show-hide"><span class="show">                         </span></div> *@
-                  </div>
+                                @*  <div class="show-hide"><span class="show">                         </span></div> *@
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <input id="checkbox1" type="checkbox">
+                                <label for="checkbox1">Þifremi Hatýrla</label>
+                            </div><a class="link" href="forget-password.html">Parolanýzý mý unuttunuz?</a>
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block" type="submit">Giriþ Yap</button>
+                        </div>
+                        <p>Hesabýnýz yok mu? <a class="ms-2" href="Login/SignUpPage">Hesap Oluþtur</a></p>
+                    </form>
                 </div>
-                <div class="form-group">
-                  <div class="checkbox">
-                    <input id="checkbox1" type="checkbox">
-                    <label for="checkbox1">Þifremi Hatýrla</label>
-                    </div><a class="link" href="forget-password.html">Parolanýzý mý unuttunuz?</a>
-                </div>
-                <div class="form-group">
-                  <button class="btn btn-primary btn-block" type="submit">Giriþ Yap</button>
-                </div> 
-                <p>Hesabýnýz yok mu? <a class ="ms-2" href="Login/SignUpPage">Hesap Oluþtur</a></p>
-              </form>
             </div>
-          </div>
         </div>
-      </div>
-    </section>
-  
+    </div>
+</section>
+
 
 
 
