--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="viho admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, viho admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-  
+
     <link rel="icon" href="~/images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon">
     <title>viho - Premium Admin Template</title>
@@ -81,10 +81,10 @@
                 </div>
                 <div class="nav-right col pull-right right-menu p-0">
                     <ul class="nav-menus">
-                        <li><a class="text-dark" href="#!" onclick="javascript:toggleFullScreen()"><i data-feather="maximize"></i></a></li>            
+                        <li><a class="text-dark" href="#!" onclick="javascript:toggleFullScreen()"><i data-feather="maximize"></i></a></li>
                         <li><div class="mode"><i class="fa fa-moon-o"></i></div></li>
                         <li class="onhover-dropdown p-0"> <button class="btn btn-primary-light" type="button"><a asp-controller="Login" asp-action="LogOut"><i data-feather="log-out"></i>Çıkış</a></button></li>
-                   </ul>
+                    </ul>
                 </div>
                 <div class="d-lg-none mobile-toggle pull-right w-auto"><i data-feather="more-horizontal"></i></div>
             </div>
@@ -115,7 +115,7 @@
             </header>
             <!-- Page Sidebar Ends-->
             <div class="page-body">
-                             <div class="container-fluid">
+                <div class="container-fluid">
                     <main role="main" class="pb-3">
                         @RenderBody()
                     </main>
@@ -134,6 +134,8 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
     <!-- latest jquery-->
     <script src="~/js/jquery-3.5.1.min.js"></script>
     <!-- feather icon js-->
@@ -160,7 +162,7 @@
     <script src="~/js/select2/select2-custom.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
-   
+
     <script src="~/js/script.js"></script>
     <script src="~/js/datatable/datatables/jquery.dataTables.min.js"></script>
     <script src="~/js/rating/jquery.barrating.js"></script>
@@ -169,12 +171,12 @@
     <script src="~/js/ecommerce.js"></script>
     <script src="~/js/product-list-custom.js"></script>
     <script src="~/js/Global.js"></script>
-   
+
 
     <!-- login js-->
     <!-- Plugin used-->
-   
-   
+
+
     <div class="modal fade" id="Modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalContracts" aria-hidden="true"></div>
     <div class="modal fade" id="Modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalContracts" aria-hidden="true"></div>
     <div class="modal fade" id="Modal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalContracts" aria-hidden="true"></div>
