--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -11,6 +11,7 @@
             <div class="card">
                 <div class="card-header pb-0">
                     <h5>Siparişler</h5>
+                    <button onclick="showPopup()">Popup Aç</button>
                 </div>
                 <div class="card-header pb-0 text-right">
                     <a class="btn btn-primary" asp-controller="Order" asp-action="CreateOrder"><span>Sipariş Oluştur</span></a>
@@ -24,8 +25,9 @@
                                     <th>Sipariş Tarihi</th>
                                     <th>Teslim Tarihi</th>
                                     <th>Sipariş Tutarı</th>
+                                    <th>Durumu</th>
                                     <th>Düzenle</th>
-
+                                    <th>Yazdır</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -36,7 +38,7 @@
                                     {
                                         <tr>
 
-                                            <th>@Cari["SipNo"]</th>
+                                            <td>@Cari["SipNo"]</td>
                                             <td>@Cari["KTRH"]</td>
                                             <td>@Cari["TESTRH"]</td>
                                             <td>@Cari["SIPTUTAR"]</td>
@@ -61,14 +63,20 @@
                                                 }
                                             </td>
                                             <td>
-                                                @*  <a href="/Order/EditOrder/@Cari["SipSira"]"><li data-feather="edit"></li></a>  *@
-                                                <form asp-controller="Order" asp-action="EditOrder" method="get">
-                                                    <input type="hidden" name="SipSira" value="@Cari["SipSira"]" />
-                                                    <button type="submit" class="btn btn-primary btn-xs">Düzenle</button>
-                                                </form>
+                                                <a href="@Url.Action("EditOrder", "Order", new { SipSira = Cari["SipSira"] })" class="btn btn-primary btn-xs">Düzenle</a>
+
+                                            </td>
                                             <td>
-
-
+                                                @*        <a href=" @Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })">
+                                        <i class="fa fa-print"></i>
+                                        </a> *@
+                                                @*       <a href="#" onclick="openPopup('@Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })')">
+                                        <i class="fa fa-print"></i>
+                                        </a> *@
+                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalLive">
+                                                    Launch demo modal
+                                                </button>
+                                            </td>
                                         </tr>
                                     }
                                 }
@@ -79,4 +87,7 @@
             </div>
         </div>
     </div>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalLive">
+        Launch demo modal
+    </button>
 </div>
