--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -103,6 +103,23 @@
 /**=====================
      01. General CSS Start
 ==========================**/
+/*yazdırma işlemi için kullanılıyor */
+@media print {
+    body * {
+        visibility: hidden;
+    }
+
+    #printableArea, #printableArea * {
+        visibility: visible;
+    }
+
+    #printableArea {
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+}
+
 
 html {
   max-width: 100vw;
