--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -3,7 +3,9 @@
     ViewData["Title"] = "Siparişler";
 
 }
-
+@section Scripts {
+    <script src="~/js/forcreateorder/formoperations.js"></script>
+}
 
 <div class="container-fluid list-products">
     <div class="row">
@@ -11,7 +13,6 @@
             <div class="card">
                 <div class="card-header pb-0">
                     <h5>Siparişler</h5>
-                    <button onclick="showPopup()">Popup Aç</button>
                 </div>
                 <div class="card-header pb-0 text-right">
                     <a class="btn btn-primary" asp-controller="Order" asp-action="CreateOrder"><span>Sipariş Oluştur</span></a>
@@ -67,15 +68,11 @@
 
                                             </td>
                                             <td>
-                                                @*        <a href=" @Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })">
-                                        <i class="fa fa-print"></i>
-                                        </a> *@
-                                                @*       <a href="#" onclick="openPopup('@Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })')">
-                                        <i class="fa fa-print"></i>
-                                        </a> *@
-                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalLive">
-                                                    Launch demo modal
-                                                </button>
+                                             @*    <a href=" @Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })">
+                                                    <i class="fa fa-print"></i>
+                                                </a> *@
+                                                <button type="button" class="btn btn btn-primary me-2" id="openModal1905">Print2</button>
+
                                             </td>
                                         </tr>
                                     }
@@ -87,7 +84,8 @@
             </div>
         </div>
     </div>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalLive">
-        Launch demo modal
-    </button>
 </div>
+
+
+
+
