--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -68,10 +68,10 @@
 
                                             </td>
                                             <td>
-                                             @*    <a href=" @Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })">
+                                                <a href=" @Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })">
                                                     <i class="fa fa-print"></i>
-                                                </a> *@
-                                                <button type="button" class="btn btn btn-primary me-2" id="openModal1905">Print2</button>
+                                                </a>
+                                              @*   <button type="button" class="btn btn btn-primary me-2" id="openModal1905">Print2</button> *@
 
                                             </td>
                                         </tr>
