--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -108,6 +108,7 @@
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="Users"><span>Kullanıcılar</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="CandidateUsers"><span>Aday Kullanıcılar</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Order" asp-action="Orders"><span>Siparişler</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Order" asp-action="OrderApproval"><span>Onay bekleyen Siparişler</span></a></li>
 
                             </ul>
                         </div>
