--- a/Views/Order/OrderSheet.cshtml
+++ b/Views/Order/OrderSheet.cshtml
@@ -119,9 +119,9 @@
                     <div class="col-sm-12 text-center mt-3">
                         <button class="btn btn btn-primary me-2" type="button" id="btnprint" readonly>Print</button>
                         <button class="btn btn btn-primary me-2" type="button" id="indirmeButonu" readonly>İndir</button>
-                        <button class="btn btn btn-primary me-2" type="button" id="downloadButton" readonly>İndir222</button>
+                        <button class="btn btn btn-primary me-2" type="button" id="downloadButton" readonly>İndir Test</button>
                         <button class="btn btn-secondary" type="button">Cancel</button>
-                        <button type="button" class="btn btn btn-primary me-2" onclick="applyModalStyles()" data-bs-toggle="modal" data-bs-target="#exampleModal">Print2</button>
+                        <button type="button" class="btn btn btn-primary me-2" onclick="applyModalStyles()" data-bs-toggle="modal" data-bs-target="#exampleModal">Print Modal</button>
                     </div>
                     <!-- End Invoice-->
                     <!-- End Invoice Holder-->
@@ -153,7 +153,7 @@
                                     <h3>@Model.OrderPrintInformations[0]["SipNo"]<span class="digits counter"></span></h3>
                                     <p>Sipariş Tarihi: @Model.OrderPrintInformations[0]["KTRH"]<span class="digits"></span><br>                                                            Teslim Tarihi: @Model.OrderPrintInformations[0]["TESTRH"]<span class="digits"></span></p>
                                 </div>
-                                <!-- End Title                                 -->
+                                <!-- End Title-->
                             </div>
                         </div>
                     </div>
@@ -254,50 +254,50 @@
 
 <script>
     //// test aşamasındaki alanlar
-    function applyModalStyles() {
-        // Modal içeriğini seç
-        var modalContent = document.getElementById("exampleModal");
+    // function applyModalStyles() {
+    //     // Modal içeriğini seç
+    //     var modalContent = document.getElementById("exampleModal");
 
-        // CSS kurallarını içeren bir <style> elementi oluştur
-        var style = document.createElement("style");
-        style.type = "text/css";
-        style.innerHTML = `
-                    /* Burada modal içeriği için stil kurallarını tanımlayın */
-                    /* Örnek: modal içeriğini merkezlemek için */
-                           body * {
-                            visibility: hidden;
-                        }
+    //     // CSS kurallarını içeren bir <style> elementi oluştur
+    //     var style = document.createElement("style");
+    //     style.type = "text/css";
+    //     style.innerHTML = `
+    //                 /* Burada modal içeriği için stil kurallarını tanımlayın */
+    //                 /* Örnek: modal içeriğini merkezlemek için */
+    //                        body * {
+    //                         visibility: hidden;
+    //                     }
 
-                                #exampleModal, #exampleModal * {
-                            visibility: visible;
-                        }
+    //                             #exampleModal, #exampleModal * {
+    //                         visibility: visible;
+    //                     }
 
-                            #exampleModal {
-                            position: absolute;
-                            left: 0;
-                            top: 0;
-                        }
-                `;
+    //                         #exampleModal {
+    //                         position: absolute;
+    //                         left: 0;
+    //                         top: 0;
+    //                     }
+    //             `;
 
-        // <style> elementini modal içine ekleyerek CSS kurallarını uygula
-        modalContent.appendChild(style);
-    }
+    //     // <style> elementini modal içine ekleyerek CSS kurallarını uygula
+    //     modalContent.appendChild(style);
+    // }
 
-    ////////////////////////////////////////////
-    $('#exampleModal').on('hidden.bs.modal', function (e) {
-        resetModalStyles();
-    });
+    // ////////////////////////////////////////////
+    // $('#exampleModal').on('hidden.bs.modal', function (e) {
+    //     resetModalStyles();
+    // });
 
-    function resetModalStyles() {
-        // Modal içeriğini seç
-        var modalContent = document.getElementById("exampleModal");
+    // function resetModalStyles() {
+    //     // Modal içeriğini seç
+    //     var modalContent = document.getElementById("exampleModal");
 
-        // Modal içeriğine eklenmiş olan stil elementini bul ve kaldır
-        var styleElement = modalContent.querySelector("style");
-        if (styleElement) {
-            modalContent.removeChild(styleElement);
-        }
-    }
+    //     // Modal içeriğine eklenmiş olan stil elementini bul ve kaldır
+    //     var styleElement = modalContent.querySelector("style");
+    //     if (styleElement) {
+    //         modalContent.removeChild(styleElement);
+    //     }
+    // }
 
 
     /////////////////////////////////////////////
