--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -67,9 +67,9 @@
                                                 <a href="@Url.Action("EditOrder", "Order", new { SipSira = Cari["SipSira"] })" class="btn btn-primary btn-xs">Düzenle</a>
 
                                             </td>
-                                            <td>
+                                            <td style="text-align: center;">
                                                 <a href=" @Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })">
-                                                    <i class="fa fa-print"></i>
+                                                    <i style="font-size: 24px;" class="fa fa-print"></i>
                                                 </a>
                                               @*   <button type="button" class="btn btn btn-primary me-2" id="openModal1905">Print2</button> *@
 
