--- a/Views/Order/OrderSheet.cshtml
+++ b/Views/Order/OrderSheet.cshtml
@@ -121,7 +121,7 @@
                         <button class="btn btn btn-primary me-2" type="button" id="indirmeButonu" readonly>İndir</button>
                         <button class="btn btn btn-primary me-2" type="button" id="downloadButton" readonly>İndir Test</button>
                         <button class="btn btn-secondary" type="button">Cancel</button>
-                        <button type="button" class="btn btn btn-primary me-2" onclick="applyModalStyles()" data-bs-toggle="modal" data-bs-target="#exampleModal">Print Modal</button>
+                        <button type="button" class="btn btn btn-primary me-2" id="openModalButton" >Print Modal</button>
                     </div>
                     <!-- End Invoice-->
                     <!-- End Invoice Holder-->
@@ -253,6 +253,9 @@
 
 
 <script>
+
+
+
     //// test aşamasındaki alanlar
     // function applyModalStyles() {
     //     // Modal içeriğini seç
