--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -68,10 +68,10 @@
 
                                             </td>
                                             <td style="text-align: center;">
-                                                <a href=" @Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })">
+                                                <a href="@Url.Action("OrderSheet", "Order", new { SipSira = Cari["SipSira"] })" class="">
                                                     <i style="font-size: 24px;" class="fa fa-print"></i>
                                                 </a>
-                                              @*   <button type="button" class="btn btn btn-primary me-2" id="openModal1905">Print2</button> *@
+                                                @*   <button type="button" class="btn btn btn-primary me-2" id="openModal1905">Print2</button> *@
 
                                             </td>
                                         </tr>
