--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -95,25 +95,23 @@
         <div class="page-body-wrapper horizontal-menu">
             <!-- Page Sidebar Start-->
             <header class="main-nav">
-                <nav>
-                    <div class="main-navbar">
-                        <div id="mainnav">
-                            <ul class="nav-menu custom-scrollbar">
-                                <li class="back-btn">
-                                    <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
-                                </li>
-                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Home" asp-action="Index"><span>Ana Sayfa</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Musteri" asp-action="MusteriList"><span>Müşteriler</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Stoklar" asp-action="Stoklar"><span>Ürünler</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="Users"><span>Kullanıcılar</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="CandidateUsers"><span>Aday Kullanıcılar</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Order" asp-action="Orders"><span>Siparişler</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Order" asp-action="OrderApproval"><span>Onay bekleyen Siparişler</span></a></li>
+                <div class="main-navbar">
+                    <div id="mainnav">
+                        <ul class="nav-menu custom-scrollbar">
+                            <li class="back-btn">
+                                <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
+                            </li>
+                            <li><a class="nav-link menu-title" asp-controller="Home" asp-action="Index"><span>Ana Sayfa</span></a></li>
+                            <li><a class="nav-link menu-title" asp-controller="Musteri" asp-action="MusteriList"><span>Müşteriler</span></a></li>
+                            <li><a class="nav-link menu-title" asp-controller="Stoklar" asp-action="Stoklar"><span>Ürünler</span></a></li>
+                            <li><a class="nav-link menu-title" asp-controller="Users" asp-action="Users"><span>Kullanıcılar</span></a></li>
+                            <li><a class="nav-link menu-title" asp-controller="Users" asp-action="CandidateUsers"><span>Aday Kullanıcılar</span></a></li>
+                            <li><a class="nav-link menu-title" asp-controller="Order" asp-action="Orders"><span>Siparişler</span></a></li>
+                            <li><a class="nav-link menu-title" asp-controller="Order" asp-action="OrderApproval"><span>Onay bekleyen Siparişler</span></a></li>
 
-                            </ul>
-                        </div>
+                        </ul>
                     </div>
-                </nav>
+                </div>
             </header>
             <!-- Page Sidebar Ends-->
             <div class="page-body">
