--- a/Views/Order/OrderSheet.cshtml
+++ b/Views/Order/OrderSheet.cshtml
@@ -131,7 +131,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="MCreateCustomer" tabindex="-1" aria-labelledby="MCreateCustomer" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-body">
