--- a/Views/Users/CandidateUsers.cshtml
+++ b/Views/Users/CandidateUsers.cshtml
@@ -12,8 +12,8 @@
                 <div class="card-header pb-0">
                     <h5>Aday Kullanıcılar</h5>
                 </div>
-                <div class="card-header pb-0 text-right">
-                </div>
+             @*    <div class="card-header pb-0 text-right">
+                </div> *@
                 <div class="card-body">
                     <div class="table-responsive product-table">
                         <table class="display" id="basic-1">
