--- a/Views/Shared/_LayoutLogin.cshtml
+++ b/Views/Shared/_LayoutLogin.cshtml
@@ -40,11 +40,11 @@
 <body>
 
             <div class="page-body">
-                             <div class="container-fluid">
+                             @* <div class="container-fluid"> *@
                     <main role="main" class="pb-3">
                         @RenderBody()
                     </main>
-                </div>
+              @*   </div> *@
             </div>
     <!-- page-wrapper end-->
     <!-- latest jquery-->
